; .. Copyright (C) 2012-2022 Bryan A. Jones.
;
;   This file is part of the CodeChat System.
;
;   The CodeChat System is free software: you can redistribute it and/or
;   modify it under the terms of the GNU General Public License as
;   published by the Free Software Foundation, either version 3 of the
;   License, or (at your option) any later version.
;
;   The CodeChat System is distributed in the hope that it will be
;   useful, but WITHOUT ANY WARRANTY; without even the implied warranty
;   of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
;   General Public License for more details.
;
;   You should have received a copy of the GNU General Public License
;   along with the CodeChat System.  If not, see
;   <http://www.gnu.org/licenses/>.
;
; **************************************************
; |docname| - Additional configuration for packaging
; **************************************************
; See the brief mention in `setuptools docs <https://setuptools.readthedocs.io/en/latest/setuptools.html;metadata>`_ along with another mention in the `PyPA <https://packaging.python.org/guides/using-manifest-in/>`_.
[metadata]
license_files=CodeChat/LICENSE.rst
